--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,4 @@
+
 body {
     font-size: 18pt;
 }
@@ -31,4 +32,27 @@ button, input{
 }
 #map {
 	min-height: 400px;
+}
+.animate-show {
+  line-height: 20px;
+  opacity: 1;
+  padding: 10px;
+  border: 1px solid black;
+  background: white;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+  transition: all linear 0.5s;
+}
+
+.animate-show.ng-hide {
+  line-height: 0;
+  opacity: 0;
+  padding: 0 10px;
+}
+
+.check-element {
+  padding: 10px;
+  border: 1px solid black;
+  background: white;
 }
